--- a/po/ko_KR.po
+++ b/po/ko_KR.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2013-05-18 23:17+0800\n"
 "Last-Translator: Bin Li <binli at gnome.org>\n"
 "Language-Team: \n"
-"Language: ko\n"
+"Language: ko_KR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
